Header, leaderboard, and button changes

--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	      		<a class="site-header__logo" href="index.html"><img src="img/logos/gv-flip-logo2--wide.svg" /></a>
 
 							<ul class="site-header__main-menu">
+								<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Start Flipping</a>
 								<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Log In</a>
 								<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
 									<img src="img/users/me&donald.jpg"/>
@@ -70,7 +71,7 @@
 					 	molestie est nec viverra. Donec erat augue, dapibus
 					 	vitae ultrices ut, tincidunt ut ligula.
 					</p>
-					<a class="btn btn--gv-red" href="signup.html">Sign Up</a>
+					<a class="btn visual-lead__btn" href="signup.html">Sign Up</a>
 				</div>
 
 			</section>
@@ -132,17 +133,19 @@
 						<h3 class="leaderboard__person__text-group__name">Divergant Dan</h3>
 						<h4 class="leaderboard__person__text-group__job">Copywriter</h4>
 						<div class="leaderboard__person__text-group__stats-group">
-							<div class="leaderboard__person__text-group__stats-group__place">No. 453</div>
+							<div class="leaderboard__person__text-group__stats-group__place">No. 4</div>
 							<div class="leaderboard__person__text-group__stats-group__amount">$19,673.25</div>
 						</div>
 					</div>
 				</div>
 
+				<div class="leaderboard__dots">
+					<div class="leaderboard__dots__single"></div>
+					<div class="leaderboard__dots__single"></div>
+					<div class="leaderboard__dots__single"></div>
+				</div>
 
-				<div class="leaderboard__your-profile">
-					<p class="leaderboard__your-profile__title"> Your Proflie</p>
-
-					<div class="leaderboard__person">
+					<div class="leaderboard__person leaderboard__your-profile">
 						<div class="leaderboard__person__image-group">
 							<img src="img/users/me&donald.jpg" />
 						</div>
@@ -150,9 +153,22 @@
 							<h3 class="leaderboard__person__text-group__name">Rivited Robert</h3>
 							<h4 class="leaderboard__person__text-group__job">Front-End Developer</h4>
 							<div class="leaderboard__person__text-group__stats-group">
-								<div class="leaderboard__person__text-group__stats-group__place">No. 1</div>
+								<div class="leaderboard__person__text-group__stats-group__place">No. 680</div>
 								<div class="leaderboard__person__text-group__stats-group__amount">$19,673.25</div>
 							</div>
+						</div>
+					</div>
+
+				<div class="leaderboard__person">
+					<div class="leaderboard__person__image-group">
+						<img src="img/users/me&donald.jpg" />
+					</div>
+					<div class="leaderboard__person__text-group">
+						<h3 class="leaderboard__person__text-group__name">Creative Christian</h3>
+						<h4 class="leaderboard__person__text-group__job">Student</h4>
+						<div class="leaderboard__person__text-group__stats-group">
+							<div class="leaderboard__person__text-group__stats-group__place">No. 681</div>
+							<div class="leaderboard__person__text-group__stats-group__amount">$19,673.25</div>
 						</div>
 					</div>
 				</div>
@@ -165,7 +181,7 @@
 						<h3 class="leaderboard__person__text-group__name">Creative Christian</h3>
 						<h4 class="leaderboard__person__text-group__job">Student</h4>
 						<div class="leaderboard__person__text-group__stats-group">
-							<div class="leaderboard__person__text-group__stats-group__place">No. 1</div>
+							<div class="leaderboard__person__text-group__stats-group__place">No. 682</div>
 							<div class="leaderboard__person__text-group__stats-group__amount">$19,673.25</div>
 						</div>
 					</div>
