added new login page

--- a/index.html
+++ b/index.html
@@ -66,10 +66,24 @@
 				<div class="visual-lead__text-group">
 					<h1 class="visual-lead__title">The GaryVee <span>#2017FlipChallenge</span></h1>
 					<p class="visual-lead__description">
-						Donec erat augue, dapibus vitae ultrices ut, tincidunt
-					 	ut ligula. Curabitur quis nisl massa. Maecenas bibendum
-					 	molestie est nec viverra. Donec erat augue, dapibus
-					 	vitae ultrices ut, tincidunt ut ligula.
+
+						Hi VaynerNation! 
+
+						<br>
+						<br/>
+						
+						Welcome to the 2017 Flip Challenger Leaderboard. The leaderboard is
+						designed to help hustlers track their own progress competitively.
+						A little competition never hurt anyone, did it?
+
+						<br>
+						<br/>
+
+
+						Happy Flipping,
+						<br/>
+						<a href="/flipteam" target="_blank">Flip Challenge Team</a>
+
 					</p>
 					<a class="btn visual-lead__btn" href="signup.html">Sign Up</a>
 				</div>
