leaderboard and mobile menu tweaks

--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
 
 	<div class="body__side-menu">
 		<nav class="side-menu">
-			<a class="side-menu__item side-menu__btn" href="signup.html"> Signup</a>
+			<a class="side-menu__item" href="login.html"> Login</a>
+			<a class="side-menu__item" href="signup.html"> Signup</a>
 			<a class="side-menu__item" href="index.html"> Leaderboard</a>
 			<a class="side-menu__item" href="dashboard.html"> Dashboard</a>
-			<a class="side-menu__item" href="login.html"> Login</a>
 
 			<span class="side-menu__close-btn">X</span>
 		</nav>
@@ -67,11 +67,11 @@
 					<h1 class="visual-lead__title">The GaryVee <span>#2017FlipChallenge</span></h1>
 					<p class="visual-lead__description">
 
-						Hi VaynerNation! 
+						Hi VaynerNation!
 
 						<br>
 						<br/>
-						
+
 						Welcome to the 2017 Flip Challenger Leaderboard. The leaderboard is
 						designed to help hustlers track their own progress competitively.
 						A little competition never hurt anyone, did it?
@@ -93,6 +93,7 @@
 
 		<section class=" leaderboard page-section page-section--medium-padding">
 			<section class="wrapper">
+				<div class="leaderboard__inner-wrap">
 				<h1 class="leaderboard__title">Leaderboard</h1>
 
 				<div class="leaderboard__person">
@@ -201,7 +202,7 @@
 					</div>
 				</div>
 
-
+			</div>
 			</section>
 		</section>
 
