--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
 		<section class=" leaderboard page-section page-section--medium-padding">
 			<section class="wrapper">
-				<div class="leaderboard__inner-wrap">
+				<div class="leaderboard_inner-wrap">
 				<h1 class="leaderboard__title">Leaderboard</h1>
 
 				<div class="leaderboard__person">
@@ -201,7 +201,6 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 			</section>
 		</section>
