finished login page

--- a/login.html
+++ b/login.html
@@ -59,7 +59,7 @@
 		</header>
 
 
-		<section class=" login page-section">
+		<section class=" login page-section page-section--gray">
 			<section class="wrapper">
 				
 
@@ -124,11 +124,9 @@
 					&copy; Gary Vaynerchuk 2017. Site by <br/>
 					<a href="http://robneal.me/" target="_blank">Rob</a>,
 					<a href="#" target="_blank">Ali</a>,
-					<a href="#" target="_blank">Brad</a>,
-					<a href="https://www.abhivyas.com/" target="_blank">Abhi</a> &
-					<a href="#" target="_blank">Dan</a>
-
-
+					<a href="#" target="_blank">Brad</a>
+					&
+					<a href="https://www.abhivyas.com/" target="_blank">Abhi</a>
 				</p>
 
 				<p class="site-footer__privacy"> <a href="lve-privacy-policy.pdf" target="_blank">Privacy Policy</a> | <a>Terms of Use</a> </p>
