--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
 	      	<nav class="site-header__nav">
 	      		<a class="site-header__logo" href="index.html"><img src="img/logos/gv-flip-logo2--wide.svg" /></a>
 
-							<ul class="site-header__main-menu">
-								<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Start Flipping</a>
-								<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Log In</a>
-								<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
-									<img src="img/users/me&donald.jpg"/>
-									<span>Dashboard</span>
-								</a>-->
-							</ul>
+				<ul class="site-header__main-menu">
+					<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Sign Up</a>
+					<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Log In</a>
+					<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
+						<img src="img/users/me&donald.jpg"/>
+						<span>Dashboard</span>
+					</a>-->
+				</ul>
 
 	      	</nav>
 			</section>
