--- a/index.html
+++ b/index.html
@@ -38,23 +38,26 @@
 	<div class="body__main">
 		<header class="site-header">
 			<section class="wrapper">
+				
 				<div class="site-header__menu-icon">
-	        <div class="site-header__menu-icon__middle"></div>
-	      </div>
+	        		<div class="site-header__menu-icon__middle"></div>
+	      		</div>
 
-	      	<nav class="site-header__nav">
-	      		<a class="site-header__logo" href="index.html"><img src="img/logos/gv-flip-logo2--wide.svg" /></a>
+		      	<nav class="site-header__nav">
+		      		<a class="site-header__logo" href="index.html"><img src="img/logos/gv-flip-logo2--wide.svg" /></a>
 
-				<ul class="site-header__main-menu">
-					<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Sign Up</a>
-					<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">Log In</a>
-					<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
-						<img src="img/users/me&donald.jpg"/>
-						<span>Dashboard</span>
-					</a>-->
-				</ul>
+					<ul class="site-header__main-menu">
+						<a class="site-header__main-menu__links site-header__main-menu__links--text" href="signup.html">Sign Up</a>
+						<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">
+							<button type="button" id="at-nav-button" class="btn btn-default navbar-btn">Sign In</button>
+						</a>
+						<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
+							<img src="img/users/me&donald.jpg"/>
+							<span>Dashboard</span>
+						</a>-->
+					</ul>
 
-	      	</nav>
+		      	</nav>
 			</section>
 		</header>
 
