--- a/login.html
+++ b/login.html
@@ -48,9 +48,9 @@
 
 					<ul class="site-header__main-menu">
 						<a class="site-header__main-menu__links site-header__main-menu__links--text" href="signup.html">Sign Up</a>
-						<a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html">
+						<!-- <a class="site-header__main-menu__links site-header__main-menu__links--text" href="login.html"> -->
 							<button type="button" id="at-nav-button" class="btn btn-default navbar-btn">Sign In</button>
-						</a>
+						<!-- </a> -->
 						<!--<a class="site-header__main-menu__links site-header__main-menu__links--img" href="#">
 							<img src="img/users/me&donald.jpg"/>
 							<span>Dashboard</span>
